erDiagram
    users ||--o| senior_profiles : has
    users ||--o| union_profiles : has
    union_profiles ||--o{ payments : receives
    union_profiles ||--o{ jobs : posts
    senior_profiles ||--o{ applications : submits
    jobs ||--o{ applications : receives
    applications ||--o| scoring : has
    senior_profiles ||--o{ services : offers
    senior_profiles ||--o{ messages : sends_or_receives
    union_profiles ||--o{ messages : sends_or_receives

    users {
        UUID id PK
        string role
        string name
        string address
        string phone_number
        date date_of_birth
        string gender
        timestamp created_at
        timestamp updated_at
    }

    senior_profiles {
        UUID id PK
        UUID user_id FK
        string name
        string address
        integer age
        string gender
        text career
        text license
        timestamp created_at
        timestamp updated_at
    }

    union_profiles {
        UUID id PK
        UUID user_id FK
        string union_name
        string dept_name
        string address
        date date_of_foundation
        text overview
        timestamp created_at
        timestamp updated_at
    }

    payments {
        UUID id PK
        UUID union_profile_id FK
        decimal amount
        string currency
        string status
        timestamp created_at
        string stripe_payment_id
    }

    jobs {
        UUID id PK
        UUID union_profile_id FK
        string title
        text description
        string location
        decimal salary
        string status
        timestamp created_at
        timestamp updated_at
    }

    services {
        UUID id PK
        UUID senior_profile_id FK
        string name
        string category
        text description
        decimal price
        string status
        timestamp created_at
        timestamp updated_at
    }

    applications {
        UUID id PK
        UUID senior_profile_id FK
        UUID job_id FK
        string status
        timestamp created_at
    }

    scoring {
        UUID id PK
        UUID application_id FK
        integer score
        json criteria_met
        timestamp created_at
    }

    messages {
        UUID id PK
        UUID sender_profile_id FK
        UUID receiver_profile_id FK
        string subject
        text body
        string status
        timestamp created_at
        timestamp updated_at
    }